# datafusion-dft

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  \  f.csv  justfile  notes  taplo.toml
.claude/: settings.local.json
.github/actions/: setup-rust.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: checks.yml  rust.yml  s3.yml  setup-rust.yml  test.yml  test_core.yml
bench/url_files/: example_custom_bench.txt
crates/datafusion-app/: Cargo.toml
crates/datafusion-app/benches/: map_table_benchmark.rs
crates/datafusion-app/src/: config.rs  db.rs  flightsql.rs  flightsql_benchmarks.rs  lib.rs  local.rs  local_benchmarks.rs  prepared_statement.rs  sql_utils.rs  stats.rs
crates/datafusion-app/src/cache/: indexmap_cache.rs  mod.rs
crates/datafusion-app/src/catalog/: mod.rs
crates/datafusion-app/src/executor/: dedicated.rs  io.rs
crates/datafusion-app/src/extensions/: builder.rs  deltalake.rs  hudi.rs  iceberg.rs  mod.rs  mysql.rs  s3.rs  vortex.rs
crates/datafusion-app/src/observability/: mod.rs  table.rs  tokio_metrics.rs
crates/datafusion-app/src/tables/: indexmap_table.rs  map_table.rs  mod.rs
crates/datafusion-auth/: Cargo.toml
crates/datafusion-auth/src/: lib.rs
crates/datafusion-ffi-table-providers/: Cargo.toml
crates/datafusion-ffi-table-providers/src/: iceberg.rs  lib.rs
crates/datafusion-functions-parquet/: Cargo.toml  README.md
crates/datafusion-functions-parquet/src/: lib.rs
crates/datafusion-rocksdb/: Cargo.toml  README.md
crates/datafusion-rocksdb/src/: lib.rs
crates/datafusion-udfs-wasm/: Cargo.toml  README.md  justfile
crates/datafusion-udfs-wasm/benches/: README.md  arrow_ipc_query_performance.rs  query_performance.rs  row_query_performance.rs  wasm_startup.rs
crates/datafusion-udfs-wasm/src/: lib.rs  mod.rs
crates/datafusion-udfs-wasm/src/arrow/: ipc.rs  mod.rs
crates/datafusion-udfs-wasm/src/native/: array.rs  mod.rs  row.rs
crates/datafusion-udfs-wasm/test-wasm/: incorrect_signatures.wasm  wasm_examples.wasm
crates/datafusion-udfs-wasm/wasm-examples/: Cargo.toml
crates/datafusion-udfs-wasm/wasm-examples/src/: lib.rs
crates/datafusion-wasm-udfs/: Cargo.toml  justfile
crates/datafusion-wasm-udfs/wasm-examples/src/: lib.rs
crates/wasm-functions/: Cargo.toml
crates/wasm-functions/src/: lib.rs
crates/wasm-udfs/: Cargo.toml
crates/wasm-udfs/src/: lib.rs
crates/wasmedge-factory/: Cargo.toml
crates/wasmedge-factory/src/: lib.rs  udf.rs
data/: test_io_formats.arrow  test_io_formats.csv  test_io_formats.json  test_io_formats.parquet
data/configs/: flightsql_basic.toml  flightsql_bearer.toml
data/hudi/v6_simplekeygen_nonhivestyle/.hoodie/: 20240418172802262.commit  20240418172802262.inflight  20240418172804498.commit  20240418172804498.inflight  hoodie.properties
data/hudi/v6_simplekeygen_nonhivestyle/10/: .hoodie_partition_metadata  97de74b1-2a8e-4bb7-874c-0a74e1f42a77-0_0-119-166_20240418172804498.parquet  97de74b1-2a8e-4bb7-874c-0a74e1f42a77-0_1-98-142_20240418172802262.parquet
data/hudi/v6_simplekeygen_nonhivestyle/20/: 76e0556b-390d-4249-b7ad-9059e2bc2cbd-0_0-98-141_20240418172802262.parquet
data/hudi/v6_simplekeygen_nonhivestyle/30/: .hoodie_partition_metadata  6db57019-98ee-480e-8eb1-fb3de48e1c24-0_1-119-167_20240418172804498.parquet
docs/: arrow_flight_analyze_protocol.md  cli.md  config.md  db.md  features.md  flightsql_analyze_protocol.md  flightsql_server.md  http_server.md  tui.md
queries/: f.sql
src/: args.rs  config.rs  db.rs  execution.rs  lib.rs  main.rs  tpch.rs
src/app/: app.rs  app_execution.rs  config.rs  core.rs  error.rs  execution.rs  mod.rs  ui.rs
src/app/datafusion/: context.rs  mod.rs
src/app/datafusion/catalog_providers/: glue.rs  (+1 more)
src/app/editor/: editor.rs  mod.rs
src/app/handlers/: edit.rs  flightsql.rs  history.rs  logging.rs  mod.rs  normal.rs  rc.rs  sql.rs
src/app/state/: mod.rs
src/app/ui/: convert.rs  mod.rs
src/cli/: args.rs  mod.rs  print_format.rs  progress.rs
src/core/: app.rs  error.rs  mod.rs  ui.rs
src/core/datafusion/: context.rs
src/core/editor/: editor.rs
src/core/handlers/: edit.rs  mod.rs  normal.rs
src/events/: events.rs  key.rs  mod.rs
src/execution/: benchmarks.rs  dedicated_executor.rs  flightsql.rs  flightsql_benchmarks.rs  local.rs  local_benchmarks.rs  mod.rs  stats.rs  wasm.rs
src/execution/executor/: dedicated.rs  io.rs  mod.rs
src/extensions/: builder.rs  deltalake.rs  functions_json.rs  hudi.rs  huggingface.rs  iceberg.rs  mod.rs  s3.rs
src/flightsql_server/: mod.rs
src/flightsql_server/services/: flightsql.rs
src/http_server/: mod.rs
src/object_store/: io_object_store.rs  mod.rs
src/object_stores/: io_object_store.rs  mod.rs
src/server/: mod.rs
src/server/flightsql/: mod.rs  service.rs
src/server/http/: mod.rs  router.rs  tpch.rs
src/server/services/: flightsql.rs  mod.rs
src/telemetry/: mod.rs
src/test_utils/: fixture.rs  mod.rs  trailers_layer.rs
src/tui/: app_execution.rs  execution.rs  mod.rs  pagination.rs
src/tui/handlers/: flightsql.rs  history.rs  mod.rs  sql.rs
src/tui/state/: mod.rs
src/tui/tabs/: flightsql.rs  sql.rs
src/tui/ui/: convert.rs  mod.rs
src/ui/: convert.rs  mod.rs
src/ui/tabs/: context.rs  explore.rs  flightsql.rs  history.rs  logs.rs  mod.rs  sql.rs
src/utils/: test_util.rs
tests/: cli.rs  common.rs  config.rs  execution.rs  extensions.rs  mod.rs  server.rs  tui.rs  util.rs
tests/app_cases/: mod.rs  tui.rs
tests/cli_cases/: basic.rs  bench.rs  config.rs  flightsql.rs  mod.rs  s3.rs  tpch.rs
tests/common/: fixture.rs  flight_server.rs  mod.rs  trailers_layer.rs
tests/execution_cases/: basic.rs  mod.rs  url_table.rs
tests/extension_cases/: auth.rs  auth_basic.rs  auth_bearer.rs  deltalake.rs  flightsql.rs  functions_json.rs  headers.rs  hudi.rs  huggingface.rs  mod.rs  s3.rs  udfs_wasm.rs  vortex.rs
tests/server_cases/: flightsql.rs  http.rs  mod.rs
tests/tui_cases/: ddl.rs  flightsql_execution.rs  flightsql_pagination.rs  keyboard_modifiers.rs  mod.rs  pagination.rs  quit.rs  sql_execution.rs  sql_pagination.rs
(+29 files in other folders)
