[package]
name = "datafusion-dft"
description = "An opinionated and batteries included DataFusion implementation"
homepage = "https://github.com/datafusion-contrib/datafusion-dft"
repository = "https://github.com/datafusion-contrib/datafusion-dft"
readme = "README.md"
authors = ["Matthew Turner <matthew.m.turner@outlook.com>"]
license = "Apache-2.0"
keywords = ["arrow", "query", "sql", "datafusion"]
version = "0.2.2"
edition = "2021"
default-run = "dft"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-flight = { version = "54.1.0", features = [
  "flight-sql-experimental",
], optional = true }
async-trait = "0.1.80"
chrono = "=0.4.39"
clap = { version = "4.5.27", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
datafusion = { version = "45.0.0" }
datafusion-app = { version = "0.1.0", path = "crates/datafusion-app" }
datafusion-auth = { version = "0.1.0", path = "crates/datafusion-auth", optional = true }
datafusion-udfs-wasm = { version = "0.1.0", path = "crates/datafusion-udfs-wasm", features = [
  "serde",
], optional = true }
directories = "5.0.1"
env_logger = "0.11.5"
futures = "0.3.30"
home = "=0.5.9"
http = "1"
http-body = "1"
itertools = "0.13.0"
lazy_static = "1.4.0"
log = "0.4.22"
metrics = { version = "0.24.0", optional = true }
metrics-exporter-prometheus = { version = "0.16.0", optional = true }
num_cpus = "1.16.0"
object_store = { version = "0.11.0", features = ["aws"], optional = true }
opendal = { version = "0.51", features = [
  "services-huggingface",
], optional = true }
object_store_opendal = { version = "0.49", optional = true }
parking_lot = "0.12.3"
parquet = "54.1.0"
pin-project-lite = { version = "0.2.14" }
prost = "0.13.1"
ratatui = "0.28.0"
serde = { version = "1.0.197", features = ["derive"] }
strum = "0.26.2"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tokio-util = "0.7.10"
toml = "0.8.12"
tonic = { version = "0.12.3", optional = true }
tower = { version = "0.5.0" }
tui-logger = { version = "0.12", features = ["tracing-support"] }
tui-textarea = { version = "0.6.1", features = ["search"] }
url = { version = "2.5.2", optional = true }
uuid = { version = "1.10.0" }
tower-http = { version = "0.6.2", features = ["auth"], optional = true }
base64 = { version = "0.22.1", optional = true }

[dev-dependencies]
assert_cmd = "2.0.16"
insta = { version = "1.40.0", features = ["yaml"] }
predicates = "3.1.2"
tempfile = "3.2.0"
url = "2.5.2"

# When addding a new feature, also add it to the features tested list in CI (`.github/workflows/rust.yml`)
[features]
default = ["functions-parquet"]
deltalake = ["datafusion-app/deltalake"]
hudi = ["datafusion-app/hudi"]
iceberg = ["datafusion-app/iceberg"]
flightsql = ["datafusion-app/flightsql", "dep:tonic", "dep:arrow-flight", "dep:metrics", "dep:metrics-exporter-prometheus", "dep:tower-http"]
s3 = ["datafusion-app/s3", "url"]
mysql = ["datafusion-app/mysql"]
functions-json = ["datafusion-app/functions-json"]
functions-parquet = ["datafusion-app/functions-parquet"]
udfs-wasm = ["datafusion-app/udfs-wasm", "dep:datafusion-udfs-wasm"]
huggingface = ["datafusion-app/huggingface"]

[[bin]]
name = "dft"
path = "src/main.rs"

[lints.clippy]
clone_on_ref_ptr = "deny"
