[package]
authors = ["Matthew Turner <matthew.m.turner@outlook.com>"]
default-run = "dft"
description = "An opinionated and batteries included DataFusion implementation"
edition = "2021"
homepage = "https://github.com/datafusion-contrib/datafusion-dft"
keywords = ["arrow", "datafusion", "query", "sql"]
license = "Apache-2.0"
name = "datafusion-dft"
readme = "README.md"
repository = "https://github.com/datafusion-contrib/datafusion-dft"
version = "0.2.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-flight = { version = "54", features = [
  "flight-sql-experimental",
], optional = true }
axum = { version = "0.7.9", features = ["macros"], optional = true }
clap = { version = "4.5.27", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
datafusion = { version = "46" }
datafusion-app = { version = "0.1.0", path = "crates/datafusion-app" }
directories = "5.0.1"
env_logger = "0.11.5"
futures = "0.3.30"
http = "1"
http-body = "1"
itertools = "0.13.0"
jiff = { version = "0.2.5", optional = true }
lazy_static = "1.4.0"
log = "0.4.22"
metrics = { version = "0.24.0", optional = true }
metrics-exporter-prometheus = { version = "0.16.0", optional = true }
parquet = "54"
pin-project-lite = { version = "0.2.14" }
prost = "0.13.1"
ratatui = "0.28.0"
serde = { version = "1.0.197", features = ["derive"] }
strum = "0.26.2"
tokio = { version = "1.36.0", features = [
  "macros",
  "process",
  "rt-multi-thread",
  "signal",
] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tokio-util = "0.7.10"
toml = "0.8.12"
tonic = { version = "0.12.3", optional = true }
tower = { version = "0.5.0" }
tower-http = { version = "0.6.2", features = [
  "auth",
  "timeout",
  "trace",
], optional = true }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tui-logger = { version = "0.12", features = ["tracing-support"] }
tui-textarea = { version = "0.6.1", features = ["search"] }
url = { version = "2.5.2", optional = true }
uuid = { version = "1.10.0", optional = true }

[dev-dependencies]
assert_cmd = "2.0.16"
datafusion-udfs-wasm = { version = "0.1.0", path = "crates/datafusion-udfs-wasm", features = [
  "serde",
] }
http-body-util = "0.1.3"
insta = { version = "1.40.0", features = ["yaml"] }
predicates = "3.1.2"
reqwest = { version = "0.12.14", features = ["json"] }
serde_json = "1.0.140"
tempfile = "3.2.0"
url = "2.5.2"

# When addding a new feature, also add it to the features tested list in CI (`.github/workflows/rust.yml`)
[features]
default = ["functions-parquet"]
deltalake = ["datafusion-app/deltalake"]
flightsql = [
  "datafusion-app/flightsql",
  "datafusion-app/observability",
  "dep:arrow-flight",
  "dep:jiff",
  "dep:metrics",
  "dep:metrics-exporter-prometheus",
  "dep:tonic",
  "dep:tower-http",
  "dep:uuid",
]
functions-json = ["datafusion-app/functions-json"]
functions-parquet = ["datafusion-app/functions-parquet"]
http = [
  "axum",
  "datafusion-app/observability",
  "dep:jiff",
  "dep:metrics",
  "dep:metrics-exporter-prometheus",
  "dep:tower-http",
  "dep:uuid",
]
huggingface = ["datafusion-app/huggingface"]
s3 = ["datafusion-app/s3", "url"]
udfs-wasm = ["datafusion-app/udfs-wasm"]

[[bin]]
name = "dft"
path = "src/main.rs"

[lints.clippy]
clone_on_ref_ptr = "deny"
