[package]
authors = ["Matthew Turner <matthew.m.turner@outlook.com>"]
default-run = "dft"
description = "An opinionated and batteries included DataFusion implementation"
edition = "2021"
homepage = "https://github.com/datafusion-contrib/datafusion-dft"
keywords = ["arrow", "datafusion", "query", "sql"]
license = "Apache-2.0"
name = "datafusion-dft"
readme = "README.md"
repository = "https://github.com/datafusion-contrib/datafusion-dft"
version = "0.2.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-flight = { features = [
  "flight-sql-experimental",
], optional = true, version = "57" }
axum = { features = ["macros"], optional = true, version = "0.7.9" }
clap = { features = ["derive"], version = "4.5.27" }
color-eyre = "0.6.3"
crossterm = { features = ["event-stream"], version = "0.28.1" }
datafusion = { version = "51" }
datafusion-app = { path = "crates/datafusion-app", version = "0.1.0" }
directories = "5.0.1"
env_logger = "0.11.5"
futures = "0.3.30"
http = "1"
http-body = "1"
itertools = "0.13.0"
jiff = { optional = true, version = "0.2.5" }
lazy_static = "1.4.0"
log = "0.4.22"
metrics = { optional = true, version = "0.24.0" }
metrics-exporter-prometheus = { optional = true, version = "0.16.0" }
object_store = "0.12"
parquet = "57"
pin-project-lite = { version = "0.2.14" }
prost = "0.14.1"
ratatui = "0.28.0"
serde = { features = ["derive"], version = "1.0.197" }
strum = "0.26.2"
tokio = { features = [
  "macros",
  "process",
  "rt-multi-thread",
  "signal",
], version = "1.36.0" }
tokio-stream = { features = ["net"], version = "0.1.15" }
tokio-util = "0.7.10"
toml = "0.8.12"
tonic = { optional = true, version = "0.14" }
tower = { version = "0.5.0" }
tower-http = { features = [
  "auth",
  "timeout",
  "trace",
], optional = true, version = "0.6.2" }
tpchgen = "2.0.2"
tpchgen-arrow = "2.0.2"
tracing = { features = ["log"], version = "0.1.41" }
tracing-subscriber = { features = ["env-filter"], version = "0.3.19" }
tui-logger = { features = ["tracing-support"], version = "0.12" }
tui-textarea = { features = ["search"], version = "0.6.1" }
url = { features = ["serde"], version = "2.5.2" }
uuid = { optional = true, version = "1.10.0" }
vortex = { optional = true, version = "0.58" }
vortex-datafusion = { optional = true, version = "0.58" }
vortex-file = { optional = true, version = "0.58" }

[dev-dependencies]
assert_cmd = "2.0.16"
datafusion-udfs-wasm = { features = [
  "serde",
], path = "crates/datafusion-udfs-wasm", version = "0.1.0" }
http-body-util = "0.1.3"
insta = { features = ["yaml"], version = "1.40.0" }
predicates = "3.1.2"
reqwest = { features = ["json"], version = "0.12.23" }
serde_json = "1.0.140"
socket2 = "0.5"
tempfile = "3.2.0"
url = "2.5.2"

# When addding a new feature, also add it to the features tested list in CI (`.github/workflows/rust.yml`)
[features]
default = ["functions-parquet", "s3"]
deltalake = ["datafusion-app/deltalake"]
flightsql = [
  "datafusion-app/flightsql",
  "datafusion-app/observability",
  "dep:arrow-flight",
  "dep:jiff",
  "dep:metrics",
  "dep:metrics-exporter-prometheus",
  "dep:tonic",
  "dep:tower-http",
  "dep:uuid",
]
functions-json = ["datafusion-app/functions-json"]
functions-parquet = ["datafusion-app/functions-parquet"]
http = [
  "axum",
  "datafusion-app/observability",
  "dep:jiff",
  "dep:metrics",
  "dep:metrics-exporter-prometheus",
  "dep:tower-http",
  "dep:uuid",
]
huggingface = ["datafusion-app/huggingface"]
s3 = ["datafusion-app/s3"]
udfs-wasm = ["datafusion-app/udfs-wasm"]
vortex = [
  "datafusion-app/vortex",
  "dep:vortex",
  "dep:vortex-datafusion",
  "dep:vortex-file",
]

[[bin]]
name = "dft"
path = "src/main.rs"

[lints.clippy]
clone_on_ref_ptr = "deny"
