[package]
edition = "2021"
name = "datafusion-app"
version = "0.1.0"

[dependencies]
arrow-flight = { version = "54.1.0", features = [
  "flight-sql-experimental",
], optional = true }
async-trait = "0.1.80"
base64 = { version = "0.22.1", optional = true }
color-eyre = "0.6.3"
datafusion = "45.0.0"
datafusion-functions-json = { version = "0.45", optional = true }
datafusion-functions-parquet = { version = "0.1.0", path = "..//datafusion-functions-parquet", optional = true }
datafusion-udfs-wasm = { version = "0.1.0", path = "../datafusion-udfs-wasm", features = [
  "serde",
], optional = true }
deltalake = { git = "https://github.com/delta-io/delta-rs", rev = "d8995e64c305dc795f62d33ce2a4614b335944ff", features = [
  "datafusion",
], optional = true }
directories = "5.0.1"
futures = "0.3.30"
hudi = { git = "https://github.com/apache/hudi-rs", rev = "eab36e2d3ea39372c52d2bf6fe41c9aa406c0bea", features = [
  "datafusion",
], optional = true }
iceberg-catalog-rest = { git = "https://github.com/apache/iceberg-rust", rev = "210134573569be0b6e49464aca076cb122e33e24", optional = true }
iceberg-datafusion = { git = "https://github.com/apache/iceberg-rust", rev = "210134573569be0b6e49464aca076cb122e33e24", optional = true }
itertools = "0.13.0"
log = "0.4.22"
num_cpus = "1.16.0"
object_store = { version = "0.11.0", features = ["aws"], optional = true }
object_store_opendal = { version = "0.49", optional = true }
opendal = { version = "0.51", features = [
  "services-huggingface",
], optional = true }
parking_lot = "0.12.3"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tonic = { version = "0.12.3", optional = true }
url = { version = "2.5.2", optional = true }

[features]
default = ["functions-parquet"]
deltalake = ["dep:deltalake"]
flightsql = ["dep:arrow-flight", "dep:base64", "dep:tonic"]
functions-json = ["dep:datafusion-functions-json"]
functions-parquet = ["dep:datafusion-functions-parquet"]
hudi = ["dep:hudi"]
huggingface = ["object_store_opendal", "opendal", "url"]
iceberg = ["dep:iceberg-catalog-rest", "dep:iceberg-datafusion"]
observability = []
s3 = ["object_store/aws", "url"]
udfs-wasm = ["dep:datafusion-udfs-wasm"]
