[package]
edition = "2021"
name = "datafusion-app"
version = "0.1.0"

# Leaving Hudi and Iceberg around in case traction on those picks up.  It would be better if I just remove them from main and create PRs with the diff - maybe ill get around to that.

[dependencies]
arrow-flight = { version = "54", features = [
  "flight-sql-experimental",
], optional = true }
async-trait = "0.1.80"
base64 = { version = "0.22.1", optional = true }
color-eyre = "0.6.3"
datafusion = "46"
datafusion-functions-json = { version = "0.46", optional = true }
datafusion-functions-parquet = { version = "0.1.0", path = "../datafusion-functions-parquet", optional = true }
datafusion-udfs-wasm = { version = "0.1.0", path = "../datafusion-udfs-wasm", features = [
  "serde",
], optional = true }
deltalake = { version = "0.25", features = ["datafusion"], optional = true }
directories = "5.0.1"
futures = "0.3.30"
indexmap = { version = "2.8.0", features = ["serde"] }
itertools = "0.13.0"
log = "0.4.22"
num_cpus = "1.16.0"
object_store = { version = "0.11.0", features = ["aws"], optional = true }
object_store_opendal = { version = "0.49", optional = true }
opendal = { version = "0.51", features = [
  "services-huggingface",
], optional = true }
parking_lot = "0.12.3"
prost = "0.13.5"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.15", features = ["net"] }
tonic = { version = "0.12.3", optional = true }
url = { version = "2.5.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[features]
default = ["functions-parquet"]
deltalake = ["dep:deltalake"]
flightsql = ["dep:arrow-flight", "dep:base64", "dep:tonic"]
functions-json = ["dep:datafusion-functions-json"]
functions-parquet = ["dep:datafusion-functions-parquet"]
huggingface = ["object_store_opendal", "opendal", "url"]
observability = []
s3 = ["object_store/aws", "url"]
udfs-wasm = ["dep:datafusion-udfs-wasm"]

[lints.clippy]
clone_on_ref_ptr = "deny"

[[bench]]
harness = false
name = "map_table_benchmark"
