[package]
edition = "2021"
name = "datafusion-app"
version = "0.1.0"

# Leaving Hudi and Iceberg around in case traction on those picks up.  It would be better if I just remove them from main and create PRs with the diff - maybe ill get around to that.

[dependencies]
arrow-flight = { features = [
  "flight-sql-experimental",
], optional = true, version = "56" }
async-trait = "0.1.80"
base64 = { optional = true, version = "0.22.1" }
color-eyre = "0.6.3"
datafusion = "50"
datafusion-functions-json = { optional = true, version = "0.50" }
datafusion-functions-parquet = { optional = true, path = "../datafusion-functions-parquet", version = "0.1.0" }
datafusion-udfs-wasm = { features = [
  "serde",
], optional = true, path = "../datafusion-udfs-wasm", version = "0.1.0" }
deltalake = { features = ["datafusion"], optional = true, version = "0.29" }
directories = "5.0.1"
futures = "0.3.30"
indexmap = { features = ["serde"], version = "2.8.0" }
itertools = "0.13.0"
log = "0.4.22"
num_cpus = "1.16.0"
object_store = { features = ["aws"], optional = true, version = "0.12" }
object_store_opendal = { optional = true, version = "0.54" }
opendal = { features = [
  "services-huggingface",
], optional = true, version = "0.54.1" }
parking_lot = "0.12.3"
serde = { features = ["derive"], version = "1.0.197" }
tokio = { features = ["macros", "rt-multi-thread"], version = "1.36.0" }
tokio-stream = { features = ["net"], version = "0.1.15" }
tonic = { optional = true, version = "0.13" }
url = { optional = true, version = "2.5.2" }

[dev-dependencies]
criterion = { features = ["async_tokio"], version = "0.5.1" }

[features]
default = ["functions-parquet"]
deltalake = ["dep:deltalake"]
flightsql = ["dep:arrow-flight", "dep:base64", "dep:tonic"]
functions-json = ["dep:datafusion-functions-json"]
functions-parquet = ["dep:datafusion-functions-parquet"]
huggingface = ["object_store_opendal", "opendal", "url"]
observability = []
s3 = ["object_store/aws", "url"]
udfs-wasm = ["dep:datafusion-udfs-wasm"]

[lints.clippy]
clone_on_ref_ptr = "deny"

[[bench]]
harness = false
name = "map_table_benchmark"
