[package]
name = "datafusion-udfs-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion = { version = "45.0.0", default-features = false }
log = "0.4.25"
serde = { version = "1.0.217", optional = true }
wasi-common = "29.0.1"
wasmtime = "29.0.1"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }

[features]
serde = ["dep:serde"]
