[package]
edition = "2021"
name = "datafusion-udfs-wasm"
version = "0.1.0"

[dependencies]
datafusion = { version = "46", default-features = false }
log = "0.4.25"
serde = { version = "1.0.217", optional = true }
wasi-common = "29.0.1"
wasmtime = "29.0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }

[features]
serde = ["dep:serde"]

[profile.bench]
debug = true

[[bench]]
harness = false
name = "wasm_startup"

[[bench]]
harness = false
name = "row_query_performance"

[[bench]]
harness = false
name = "arrow_ipc_query_performance"
