[package]
edition = "2021"
name = "datafusion-udfs-wasm"
version = "0.1.0"

[dependencies]
datafusion = { default-features = false, version = "51" }
log = "0.4.25"
serde = { optional = true, version = "1.0.217" }
wasi-common = "29.0.1"
wasmtime = "29.0.1"

[dev-dependencies]
criterion = { features = ["html_reports"], version = "0.5" }
tokio = { features = ["macros", "rt-multi-thread"], version = "1.36.0" }

[features]
serde = ["dep:serde"]

[profile.bench]
debug = true

[[bench]]
harness = false
name = "wasm_startup"

[[bench]]
harness = false
name = "row_query_performance"

[[bench]]
harness = false
name = "arrow_ipc_query_performance"
